--- a/index.html
+++ b/index.html
@@ -3,64 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
+    <title>EasyDonate Shop</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            color: #333;
         }
         header {
-            background: #333;
-            color: #fff;
+            background: #4CAF50;
+            color: white;
             padding: 10px 20px;
             text-align: center;
         }
-        nav {
-            background: #555;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        main {
+        .container {
             padding: 20px;
         }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
+        .product {
+            border: 1px solid #ddd;
+            margin-bottom: 15px;
             padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            border-radius: 5px;
+            background: white;
+        }
+        .product h3 {
+            margin: 0 0 10px;
+        }
+        .buy-button {
+            background: #4CAF50;
+            color: white;
+            padding: 10px;
+            text-decoration: none;
+            border-radius: 5px;
+            display: inline-block;
+        }
+        .buy-button:hover {
+            background: #45a049;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
-        <p>Your one-stop destination for simple web design.</p>
+        <h1>EasyDonate Shop</h1>
+        <p>Покупайте товары легко и быстро!</p>
     </header>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <main>
-        <h2>About This Site</h2>
-        <p>This is a simple HTML page with some CSS for styling. It's a great starting point for learning web development!</p>
-    </main>
-    <footer>
-        <p>&copy; 2025 Simple Website. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <div id="products">
+            <p>Загрузка товаров...</p>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
