--- a/index.html
+++ b/index.html
@@ -3,30 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мои проекты | slavazaharov</title>
+    <title>Проекты | slavazaharov</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <div class="glow"></div>
     <div class="container">
         <header class="header">
-            <div class="profile">
-                <img src="https://avatars.githubusercontent.com/u/YOUR_GITHUB_ID" alt="Аватар" class="avatar" id="avatar">
-                <div class="profile-info">
-                    <h1>slavazaharov</h1>
-                    <p id="last-updated">Последнее обновление: загрузка...</p>
-                    <p id="last-release">Последний релиз: загрузка...</p>
-                </div>
+            <div class="avatar-wrapper">
+                <img src="https://avatars.githubusercontent.com/u/118283118?v=4" alt="Avatar" class="avatar">
+                <div class="pulse"></div>
             </div>
+            <h1>@slavazaharov</h1>
+            <p class="subtitle">Код · Стиль · Инновации</p>
         </header>
 
-        <main class="projects" id="projects">
-            <!-- Проекты будут загружены через JavaScript -->
-            <div class="loader"><i class="fas fa-spinner fa-spin"></i> Загрузка проектов...</div>
+        <main class="projects-grid" id="projects">
+            <!-- Проекты будут здесь -->
         </main>
 
         <footer class="footer">
-            <p>© 2025 slavazaharov | Hosted on GitHub Pages</p>
+            <p>Сделано с <i class="fas fa-heart"></i> на GitHub Pages</p>
         </footer>
     </div>
 
