--- a/index.html
+++ b/index.html
@@ -3,28 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Проекты | slavazaharov</title>
+    <title>Slava Zaharov | Проекты</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="glow"></div>
     <div class="container">
         <header class="header">
-            <div class="avatar-wrapper">
-                <img src="https://avatars.githubusercontent.com/u/118283118?v=4" alt="Avatar" class="avatar">
-                <div class="pulse"></div>
+            <div class="profile">
+                <img src="https://avatars.githubusercontent.com/u/YOUR_GITHUB_USER_ID?v=4" alt="Avatar" class="avatar">
+                <div class="profile-info">
+                    <h1>Slava Zaharov</h1>
+                    <p class="bio">Разработчик & Дизайнер</p>
+                    <div class="stats">
+                        <div class="stat-item">
+                            <i class="fas fa-code-branch"></i>
+                            <span id="repo-count">Загрузка...</span>
+                        </div>
+                        <div class="stat-item">
+                            <i class="fas fa-star"></i>
+                            <span id="total-stars">Загрузка...</span>
+                        </div>
+                        <div class="stat-item">
+                            <i class="fas fa-clock"></i>
+                            <span id="last-updated">Загрузка...</span>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <h1>@slavazaharov</h1>
-            <p class="subtitle">Код · Стиль · Инновации</p>
         </header>
 
-        <main class="projects-grid" id="projects">
-            <!-- Проекты будут здесь -->
+        <main class="main-content">
+            <section class="projects-section">
+                <h2><i class="fas fa-project-diagram"></i> Мои проекты</h2>
+                <div class="projects-grid" id="projects-container">
+                    <!-- Проекты будут загружаться через JavaScript -->
+                </div>
+            </section>
+
+            <section class="releases-section">
+                <h2><i class="fas fa-tags"></i> Последние релизы</h2>
+                <div class="releases-list" id="releases-container">
+                    <!-- Релизы будут загружаться через JavaScript -->
+                </div>
+            </section>
         </main>
 
         <footer class="footer">
-            <p>Сделано с <i class="fas fa-heart"></i> на GitHub Pages</p>
+            <p>© 2023 Slava Zaharov | <a href="https://github.com/slavazaharov" target="_blank">GitHub</a></p>
+            <p id="last-release">Последний релиз: загрузка...</p>
         </footer>
     </div>
 
