--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slava Zaharov | Проекты</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="particles" id="particles-js"></div>
     <div class="container">
-        <header class="header">
+        <header class="header animate__animated animate__fadeInDown">
             <div class="profile">
-                <img src="https://avatars.githubusercontent.com/u/YOUR_GITHUB_USER_ID?v=4" alt="Avatar" class="avatar">
+                <div class="avatar-container">
+                    <img src="" alt="Avatar" class="avatar" id="github-avatar">
+                    <div class="avatar-border"></div>
+                </div>
                 <div class="profile-info">
                     <h1>Slava Zaharov</h1>
                     <p class="bio">Разработчик & Дизайнер</p>
@@ -34,27 +39,35 @@
         </header>
 
         <main class="main-content">
-            <section class="projects-section">
+            <section class="projects-section animate__animated animate__fadeIn">
                 <h2><i class="fas fa-project-diagram"></i> Мои проекты</h2>
                 <div class="projects-grid" id="projects-container">
                     <!-- Проекты будут загружаться через JavaScript -->
+                    <div class="project-card-skeleton"></div>
+                    <div class="project-card-skeleton"></div>
+                    <div class="project-card-skeleton"></div>
                 </div>
             </section>
 
-            <section class="releases-section">
+            <section class="releases-section animate__animated animate__fadeIn">
                 <h2><i class="fas fa-tags"></i> Последние релизы</h2>
                 <div class="releases-list" id="releases-container">
                     <!-- Релизы будут загружаться через JavaScript -->
+                    <div class="release-item-skeleton"></div>
+                    <div class="release-item-skeleton"></div>
                 </div>
             </section>
         </main>
 
-        <footer class="footer">
+        <footer class="footer animate__animated animate__fadeInUp">
             <p>© 2023 Slava Zaharov | <a href="https://github.com/slavazaharov" target="_blank">GitHub</a></p>
             <p id="last-release">Последний релиз: загрузка...</p>
         </footer>
     </div>
 
+    <!-- Подключаем библиотеки для анимаций -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
