--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                     <div class="project-card-skeleton"></div>
                     <div class="project-card-skeleton"></div>
                 </div>
+                <!-- В секции проектов -->
+                <div class="projects-grid" id="projects-container">
+                    <div class="loading-dots">Загрузка проектов</div>
+                </div>
             </section>
 
             <section class="releases-section animate__animated animate__fadeIn">
@@ -55,6 +59,10 @@
                     <!-- Релизы будут загружаться через JavaScript -->
                     <div class="release-item-skeleton"></div>
                     <div class="release-item-skeleton"></div>
+                </div>
+                <!-- В секции релизов -->
+                <div class="releases-list" id="releases-container">
+                    <div class="loading-dots">Загрузка релизов</div>
                 </div>
             </section>
         </main>
