--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                 <div class="w-3 h-3 rounded-full bg-yellow-500 mr-2"></div>
                 <div class="w-3 h-3 rounded-full bg-green-500 mr-2"></div>
                 <div class="ml-4 hacker-font text-xl">
-                    <span class="text-gray-400">root@cyberdev:</span>
+                    <span class="text-gray-400">root@sldev:</span>
                     <span class="text-white">~</span>
                     <span class="text-gray-400">$</span>
                     <span class="typing"> loading user profile...</span>
@@ -680,7 +680,7 @@
                 <div class="w-3 h-3 rounded-full bg-yellow-500 mr-2"></div>
                 <div class="w-3 h-3 rounded-full bg-green-500 mr-2"></div>
                 <div class="ml-4 hacker-font text-xl">
-                    <span class="text-gray-400">root@cyberdev:</span>
+                    <span class="text-gray-400">root@sldev:</span>
                     <span class="text-white">~</span>
                     <span class="text-gray-400">$</span>
                     <span class="typing"> scanning repositories...</span>
@@ -706,7 +706,7 @@
                 <div class="w-3 h-3 rounded-full bg-yellow-500 mr-2"></div>
                 <div class="w-3 h-3 rounded-full bg-green-500 mr-2"></div>
                 <div class="ml-4 hacker-font text-xl">
-                    <span class="text-gray-400">root@cyberdev:</span>
+                    <span class="text-gray-400">root@sldev:</span>
                     <span class="text-white">~</span>
                     <span class="text-gray-400">$</span>
                     <span class="typing"> analyzing activity...</span>
@@ -772,7 +772,7 @@
     <!-- Footer -->
     <footer class="terminal mx-4 mb-4 p-4 text-center hacker-font animate-border-glow">
         <p class="mb-2">System Status: <span class="text-green-500">OPERATIONAL</span></p>
-        <p>© 2023 Slava Zaharov | All systems secured</p>
+        <p>© 2025 Slava Zaharov | All systems secured</p>
     </footer>
 
     <script>
