--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                 <!-- Profile section -->
                 <div class="col-span-1 flex flex-col items-center">
                     <div class="hexagon hexagon-bg w-40 h-40 flex items-center justify-center mb-4 animate-spin-slow">
-                        <img id="avatar" src="https://github.com/slavazaharov.png" alt="Profile" class="hexagon w-[90%] h-[90%] object-cover">
+                        <img id="avatar" src="https://github.com/rapid4ik.png" alt="Profile" class="hexagon w-[90%] h-[90%] object-cover">
                     </div>
                     
                     <h1 class="glitch text-3xl font-bold mb-2 text-center" data-text="Slava Zaharov">
@@ -710,9 +710,9 @@
                             <div class="hacker-btn px-3 py-1 border border-blue-500 rounded hacker-font text-sm">
                                 <i class="fas fa-project-diagram mr-1"></i> Open Source
                             </div>
-                            <div class="hacker-btn px-3 py-1 border border-pink-500 rounded hacker-font text-sm">
+                            <!-- <div class="hacker-btn px-3 py-1 border border-pink-500 rounded hacker-font text-sm">
                                 <i class="fas fa-robot mr-1"></i> AI Enthusiast
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     
