--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
             </div>
             <p class="mb-4">Just kidding! Everything is open source here.</p>
             <div class="flex justify-center">
-                <a href="https://github.com/slavazaharov" target="_blank" class="hacker-btn px-6 py-2 border border-green-500 rounded hacker-font text-lg hover:animate-float">
+                <a href="https://github.com/rapid4ik" target="_blank" class="hacker-btn px-6 py-2 border border-green-500 rounded hacker-font text-lg hover:animate-float">
                     <i class="fab fa-github mr-2"></i> View Full Profile
                 </a>
             </div>
