--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>rapid4ik — GitHub Portfolio</title>
-  <meta name="description" content="Неоновый портфолио-сайт с GitHub API: профиль, статистика, репозитории, языки." />
+  <title>rapid4ik — GitHub Portfolio (JSON only)</title>
+  <meta name="description" content="Неоновый портфолио-сайт. Источник данных — только /data/*.json, обновляемые GitHub Actions." />
   <meta name="theme-color" content="#05060a" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -112,17 +111,7 @@
 
     footer{margin-top:40px;text-align:center;color:var(--muted);font-size:12px}
 
-    /* ===== Модал токена и адаптив ===== */
-    .modal-backdrop{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;align-items:center;justify-content:center;z-index:1000}
-    .modal-backdrop.open{display:flex}
-    .modal{width:min(560px,92vw);background:var(--glass);border:1px solid rgba(255,255,255,.12);border-radius:16px;padding:18px;box-shadow:var(--shadow-neon)}
-    .modal h3{margin:0 0 6px;font-family:Orbitron,Inter,sans-serif}
-    .modal .muted{color:var(--muted);margin:0 0 10px}
-    .modal .small{font-size:12px}
-    .modal .row{display:flex;gap:10px}
-    .modal input{flex:1;padding:12px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.12);background:rgba(0,0,0,.25);color:var(--text);outline:none}
-    .modal .actions{margin-top:12px;display:flex;gap:10px;flex-wrap:wrap}
-
+    /* ===== Адаптив ===== */
     @media (max-width: 420px){
       .container{padding:24px 14px 64px}
       header{grid-template-columns:68px 1fr;padding:14px}
@@ -154,11 +143,10 @@
       <img id="avatar" class="avatar" alt="avatar" src="" loading="lazy" />
       <div>
         <h1 class="title"><span id="name">…</span> <span class="handle" id="handle"></span></h1>
-        <p class="bio" id="bio"></p>
+        <p class="bio" id="bio"></></p>
         <div class="cta-row">
           <a id="profileLink" class="btn" href="#" target="_blank" rel="noopener">Открыть GitHub</a>
           <button id="copyLink" class="btn" title="Скопировать ссылку на сайт">Скопировать ссылку</button>
-          <button id="tokenBtn" class="btn" title="Добавить/очистить GitHub токен">🔑 Токен</button>
         </div>
         <div class="stats" id="stats">
           <div class="stat"><div class="num" id="repoCount">—</div><div class="label">Публичные репозитории</div></div>
@@ -171,7 +159,7 @@
 
     <h2 class="section-title">Языки в проектах</h2>
     <div class="panel" id="chartWrap">
-      <div class="notice" id="chartNotice">Секундочку… собираю статистику по языкам во всех публичных репозиториях. Это может занять пару секунд.</div>
+      <div class="notice" id="chartNotice">Жду файлы из <code>/data</code>…</div>
       <canvas id="langChart" height="180" aria-label="Диаграмма распределения языков" role="img"></canvas>
       <div id="legend"></div>
     </div>
@@ -183,7 +171,7 @@
       </div>
       <div class="pill" id="repoTotal">Репозиториев: —</div>
       <div class="pill" id="lastSync">Обновлено: —</div>
-      <div class="pill" id="sourcePill">Источник: —</div>
+      <div class="pill" id="sourcePill">Источник: JSON</div>
       <button class="btn" id="refreshBtn" title="Принудительно перечитать data/*.json">Обновить</button>
     </div>
 
@@ -191,53 +179,29 @@
 
     <div id="alerts" style="margin-top:16px"></div>
 
-    <!-- Modal: GitHub Token -->
-    <div id="tokenModal" class="modal-backdrop" aria-hidden="true">
-      <div class="modal" role="dialog" aria-modal="true" aria-labelledby="tokenTitle">
-        <h3 id="tokenTitle">GitHub токен</h3>
-        <p class="muted">Опционально: увеличит лимит API до ~5000 запросов/час.</p>
-        <div class="row"><input id="tokenInput" type="password" placeholder="ghp_... / github_pat_..." /></div>
-        <div class="actions">
-          <button id="tokenSave" class="btn">Сохранить</button>
-          <button id="tokenClear" class="btn">Очистить</button>
-          <button id="tokenClose" class="btn">Закрыть</button>
-        </div>
-        <p class="muted small">Токен хранится в вашем браузере (localStorage). Никогда не коммитьте его в репозиторий.</p>
-      </div>
-    </div>
-
     <footer>
-      Сделано с ❤️ и неоном · Данные из <a href="https://docs.github.com/rest" target="_blank" rel="noopener">GitHub API</a> или из <code>/data/*.json</code>
+      Сделано с ❤️ и неоном · Источник данных: только <code>/data/*.json</code>
     </footer>
   </div>
 
   <script>
-  // ====== Настройки ======
-  const USERNAME = new URL(location.href).searchParams.get('u') || 'rapid4ik';
-  const GITHUB_TOKEN = null; // или строка токена. Лучше хранить в localStorage.
+  // ====== JSON-only режим: ТОЛЬКО из /data, БЕЗ запросов в API ======
 
-  // Неоновая палитра
-  const NEON_COLORS = [
-    '#00f0ff', '#ff2bd6', '#9b5cff', '#28f7a6', '#ff9f1a', '#2ee6de', '#f368e0', '#54a0ff', '#ff6b6b', '#48dbfb', '#c56cf0', '#1dd1a1'
-  ];
-
-  let TOKEN = localStorage.getItem('gh_token') || GITHUB_TOKEN;
-
-  // Режим периодического чтения готовых JSON (которые собирает GitHub Actions)
-  const USE_JSON_FIRST = true;                 // сначала пробуем data/*.json
-  const JSON_BASE = '/data';                   // папка с выгрузкой
-  const JSON_CANDIDATES = [                    // кандидаты для единого файла
+  // Определяем базовый путь (работает и для user-pages, и для project-pages)
+  const ROOT = (()=>{
+    let p = location.pathname;
+    if (p.endsWith('/index.html')) p = p.slice(0, -'/index.html'.length);
+    if (p.endsWith('/')) p = p.slice(0, -1);
+    return p;
+  })();
+  const JSON_BASE = (ROOT || '') + '/data';
+  const JSON_CANDIDATES = [
     `${JSON_BASE}/summary.json`,
     `${JSON_BASE}/data.json`,
     `${JSON_BASE}/github.json`,
     `${JSON_BASE}/out.json`
   ];
-  const REFRESH_MS = 5 * 60 * 1000;            // каждые 5 минут обновляем данные
-  let lastUpdatedAt = null;
-
-  const getHeaders = () => {
-    return TOKEN ? { 'Authorization': 'Bearer ' + TOKEN } : {};
-  };
+  const REFRESH_MS = 5 * 60 * 1000;
 
   const $ = (sel, root=document) => root.querySelector(sel);
   const $$ = (sel, root=document) => Array.from(root.querySelectorAll(sel));
@@ -251,9 +215,7 @@
     chart: null,
   };
 
-  function fmt(n){
-    return new Intl.NumberFormat('ru-RU').format(n);
-  }
+  function fmt(n){ return new Intl.NumberFormat('ru-RU').format(n); }
   function timeAgo(isoStr){
     const d = new Date(isoStr);
     const diff = (Date.now()-d)/1000;
@@ -262,24 +224,6 @@
     return 'только что';
   }
 
-  async function ghFetch(url){
-    const res = await fetch(url, { headers: { ...getHeaders(), 'Accept': 'application/vnd.github+json' } });
-    if(res.status===403){
-      const remaining = res.headers.get('X-RateLimit-Remaining');
-      const reset = res.headers.get('X-RateLimit-Reset');
-      const msg = remaining==='0'
-        ? `Достигнут лимит GitHub API. Попробуйте позже${reset?`, или после ${new Date(+reset*1000).toLocaleTimeString('ru-RU')}`:''}.`
-        : 'Доступ ограничен GitHub API.';
-      throw new Error(msg);
-    }
-    if(!res.ok){
-      const text = await res.text().catch(()=>res.statusText);
-      throw new Error(text || res.statusText);
-    }
-    return { data: await res.json(), headers: res.headers };
-  }
-
-  // ===== Работа с готовыми JSON (Actions) =====
   async function fetchJSON(path){
     try{
       const r = await fetch(path + (path.includes('?')?'&':'?') + 't=' + Date.now(), { cache: 'no-store' });
@@ -288,14 +232,25 @@
     }catch{ return null; }
   }
 
-  function setLastSync(iso){
-    lastUpdatedAt = iso;
-    const el = $('#lastSync');
-    if(el) el.textContent = 'Обновлено: ' + (iso ? timeAgo(iso) : '—');
+  function escapeHtml(s){
+    return (s||'').replace(/[&<>\"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','\"':'&quot;','\\'':'&#39;'}[c]));
   }
-  function setSource(src){
-    const el = $('#sourcePill');
-    if(el) el.textContent = 'Источник: ' + src;
+
+  function updateRepoLangBar(fullName, langs){
+    const card = document.querySelector(\`.repo[data-full-name="\${CSS.escape(fullName)}"]\`);
+    if(!card) return;
+    const bar = card.querySelector('.langbar');
+    const total = Object.values(langs||{}).reduce((a,b)=>a+b,0) || 0;
+    bar.innerHTML = '';
+    if(total===0) return;
+    const entries = Object.entries(langs).sort((a,b)=>b[1]-a[1]).slice(0,6);
+    entries.forEach(([lang, bytes], i)=>{
+      const seg = document.createElement('div');
+      seg.className = 'langseg';
+      seg.style.width = (bytes*100/total).toFixed(2)+'%';
+      seg.style.background = ['#00f0ff','#ff2bd6','#9b5cff','#28f7a6','#ff9f1a','#2ee6de'][i % 6];
+      bar.appendChild(seg);
+    });
   }
 
   function renderRepos(repos){
@@ -332,27 +287,6 @@
     grid.appendChild(frag);
   }
 
-  function escapeHtml(s){
-    return (s||'').replace(/[&<>"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[c]));
-  }
-
-  function updateRepoLangBar(fullName, langs){
-    const card = document.querySelector(\`.repo[data-full-name="\${CSS.escape(fullName)}"]\`);
-    if(!card) return;
-    const bar = card.querySelector('.langbar');
-    const total = Object.values(langs||{}).reduce((a,b)=>a+b,0) || 0;
-    bar.innerHTML = '';
-    if(total===0) return;
-    const entries = Object.entries(langs).sort((a,b)=>b[1]-a[1]).slice(0,6);
-    entries.forEach(([lang, bytes], i)=>{
-      const seg = document.createElement('div');
-      seg.className = 'langseg';
-      seg.style.width = (bytes*100/total).toFixed(2)+'%';
-      seg.style.background = NEON_COLORS[i % NEON_COLORS.length];
-      bar.appendChild(seg);
-    });
-  }
-
   function renderLangChart(){
     const totals = state.langTotals || {};
     const entries = Object.entries(totals).sort((a,b)=>b[1]-a[1]);
@@ -367,30 +301,20 @@
     if(state.chart){ state.chart.destroy(); }
     state.chart = new Chart(ctx, {
       type:'doughnut',
-      data:{
-        labels,
-        datasets:[{
-          data,
-          backgroundColor: labels.map((_,i)=>NEON_COLORS[i%NEON_COLORS.length]),
-          borderWidth: 0,
-        }]
-      },
+      data:{ labels, datasets:[{ data, borderWidth: 0 }] },
       options:{
         responsive:true,
-        plugins:{
-          legend:{ display:false },
-          tooltip:{ callbacks:{ label:(ctx)=> `${ctx.label}: ${fmt(ctx.parsed)} байт` } }
-        },
+        plugins:{ legend:{ display:false }, tooltip:{ callbacks:{ label:(ctx)=> `${ctx.label}: ${fmt(ctx.parsed)} байт` } } },
         cutout:'60%'
       }
     });
 
     const legend = $('#legend');
     legend.innerHTML = '';
-    labels.forEach((label,i)=>{
+    labels.forEach((label)=>{
       const el = document.createElement('div');
       el.className='legend-item';
-      el.innerHTML = `<span class="legend-dot" style="background:${NEON_COLORS[i%NEON_COLORS.length]}"></span>${label}`;
+      el.innerHTML = `<span class="legend-dot"></span>${label}`;
       legend.appendChild(el);
     });
   }
@@ -406,7 +330,7 @@
     renderLangChart();
   }
 
-  async function loadFromJSONCombinedOrSplit(showAlert=false){
+  async function loadFromJSON(showAlert=false){
     const alerts = $('#alerts');
 
     // 1) Единый файл
@@ -418,6 +342,7 @@
         const totals  = pkg.langTotals || pkg.languages || {};
         const updated = pkg.updatedAt || pkg.generatedAt || pkg.updated || null;
 
+        // профиль
         state.profile = profile;
         $('#avatar').src = profile.avatar_url;
         $('#name').textContent = profile.name || profile.login;
@@ -429,13 +354,14 @@
         $('#following').textContent = fmt(profile.following);
         $('#gists').textContent = fmt(profile.public_gists || 0);
 
+        // данные
         state.repos = repos;
         state.langTotals = totals;
         state.langsByRepo = new Map(repos.map(r=>[r.full_name, r.languages||{}]));
 
         renderAfterData();
-        setLastSync((updated ? new Date(updated) : new Date()).toISOString());
-        setSource('JSON (summary)');
+        const iso = (updated ? new Date(updated) : new Date()).toISOString();
+        $('#lastSync').textContent = 'Обновлено: ' + (iso ? timeAgo(iso) : '—');
         if(showAlert) alerts.innerHTML = `<div class="notice">Загружено из ${p}.</div>`;
         return true;
       }
@@ -462,79 +388,13 @@
       state.langsByRepo = new Map(repos.map(r=>[r.full_name, r.languages||{}]));
 
       renderAfterData();
-      setLastSync(new Date().toISOString());
-      setSource('JSON (split)');
+      const iso = new Date().toISOString();
+      $('#lastSync').textContent = 'Обновлено: ' + (iso ? timeAgo(iso) : '—');
       if(showAlert) alerts.innerHTML = '<div class="notice">Данные обновлены из data/*.json.</div>';
       return true;
     } else {
-      if(showAlert) alerts.innerHTML = '<div class="notice error">Не удалось загрузить data/*.json. Использую прямые запросы к API.</div>';
+      if(showAlert) alerts.innerHTML = '<div class="notice error">Не найдено /data/data.json или три файла /data/profile.json, /data/repos.json, /data/langTotals.json.</div>';
       return false;
-    }
-  }
-
-  async function loadProfile(){
-    const { data } = await ghFetch(`https://api.github.com/users/${USERNAME}`);
-    state.profile = data;
-    $('#avatar').src = data.avatar_url;
-    $('#name').textContent = data.name || data.login;
-    $('#handle').textContent = '@'+data.login;
-    $('#bio').textContent = data.bio || '';
-    $('#profileLink').href = data.html_url;
-    $('#repoCount').textContent = fmt(data.public_repos);
-    $('#followers').textContent = fmt(data.followers);
-    $('#following').textContent = fmt(data.following);
-    $('#gists').textContent = fmt(data.public_gists || 0);
-  }
-
-  async function loadAllRepos(){
-    const all = [];
-    let page = 1;
-    while(true){
-      const { data, headers } = await ghFetch(`https://api.github.com/users/${USERNAME}/repos?per_page=100&sort=updated&direction=desc&page=${page}`);
-      all.push(...data.filter(r=>!r.fork));
-      const link = headers.get('Link')||'';
-      if(!/rel="next"/.test(link)) break;
-      page++;
-    }
-    all.sort((a,b)=> b.stargazers_count - a.stargazers_count || new Date(b.updated_at)-new Date(a.updated_at));
-    state.repos = state.filtered = all;
-    $('#repoTotal').textContent = `Репозиториев: ${fmt(all.length)}`;
-    renderRepos(all);
-  }
-
-  // Ограничение параллелизма
-  async function mapLimit(items, limit, worker){
-    const ret = [];
-    let i = 0; let active = 0;
-    return new Promise((resolve, reject)=>{
-      const next = ()=>{
-        if(i===items.length && active===0) return resolve(ret);
-        while(active<limit && i<items.length){
-          const idx = i++; active++;
-          Promise.resolve(worker(items[idx], idx)).then(v=>{ret[idx]=v; active--; next();}).catch(err=>reject(err));
-        }
-      };
-      next();
-    });
-  }
-
-  async function loadLanguagesForRepos(){
-    const repos = state.repos;
-    const alerts = $('#alerts');
-    try{
-      await mapLimit(repos, 4, async (r)=>{
-        const { data } = await ghFetch(`https://api.github.com/repos/${r.full_name}/languages`);
-        state.langsByRepo.set(r.full_name, data);
-        for(const [lang, bytes] of Object.entries(data)){
-          state.langTotals[lang] = (state.langTotals[lang]||0) + bytes;
-        }
-        updateRepoLangBar(r.full_name, data);
-      });
-      $('#chartNotice').style.display='none';
-      renderLangChart();
-    }catch(err){
-      alerts.innerHTML = `<div class="notice error">${escapeHtml(String(err.message||err))}</div>`;
-      $('#chartNotice').textContent = 'Не удалось построить диаграмму языков.';
     }
   }
 
@@ -561,65 +421,22 @@
     });
   }
 
-  // Окно для управления токеном
-  function hookToken(){
-    const btn = $('#tokenBtn');
-    const modal = $('#tokenModal');
-    const input = $('#tokenInput');
-    const save = $('#tokenSave');
-    const clearBtn = $('#tokenClear');
-    const close = $('#tokenClose');
-
-    if(!btn) return;
-
-    const open = () => { input.value = localStorage.getItem('gh_token') || ''; modal.classList.add('open'); setTimeout(()=>input.focus(), 0); };
-    const hide = () => modal.classList.remove('open');
-
-    btn.addEventListener('click', open);
-    close.addEventListener('click', hide);
-    modal.addEventListener('click', (e)=>{ if(e.target===modal) hide(); });
-
-    save.addEventListener('click', ()=>{
-      const v = input.value.trim();
-      if(!v){ alert('Вставьте токен вида ghp_... / github_pat_...'); return; }
-      localStorage.setItem('gh_token', v);
-      TOKEN = v;
-      hide();
-      location.reload();
-    });
-
-    clearBtn.addEventListener('click', ()=>{
-      localStorage.removeItem('gh_token');
-      TOKEN = null;
-      hide();
-      location.reload();
-    });
-  }
-
   function hookRefresh(){
     const btn = $('#refreshBtn');
     if(!btn) return;
-    btn.addEventListener('click', ()=> loadFromJSONCombinedOrSplit(true));
+    btn.addEventListener('click', ()=> loadFromJSON(true));
   }
 
   async function init(){
-    try{
-      const ok = USE_JSON_FIRST ? await loadFromJSONCombinedOrSplit(false) : false;
-      hookSearch();
-      hookCopy();
-      hookToken();
-      hookRefresh();
+    hookSearch();
+    hookCopy();
+    hookRefresh();
 
-      if(!ok){
-        await loadProfile();
-        await loadAllRepos();
-        loadLanguagesForRepos();
-        setSource('API');
-      } else {
-        setInterval(()=> loadFromJSONCombinedOrSplit(true), REFRESH_MS);
-      }
-    }catch(err){
-      $('#alerts').innerHTML = `<div class="notice error">${escapeHtml(String(err.message||err))}</div>`;
+    const ok = await loadFromJSON(false);
+    if(!ok){
+      $('#alerts').innerHTML = '<div class="notice error">Не удалось загрузить JSON. Убедись, что GitHub Actions создал файлы в /data и они лежат в той же ветке, откуда отдаются Pages.</div>';
+    } else {
+      setInterval(()=> loadFromJSON(true), REFRESH_MS);
     }
   }
 
